<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/letour_tap" >
    
    <ImageView android:id="@+id/tap_img_logo" 
    android:src="@drawable/bike_logo" 
    style="@style/MainLogo"
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true" />
    
    <TextView android:id="@+id/slot_status"  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_below="@id/tap_img_logo" 
    android:text="@string/status"
    />
    
    <Button android:id="@+id/btn_pickup_action" 
    android:text="@string/pickup_bike_action" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/slot_status" 
    android:onClick="doPickupBikeAction" />
    
    <Button android:id="@+id/btn_dropoff_action" 
    android:text="@string/dropoff_bike_action" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/btn_pickup_action" 
    android:onClick="doDropoffBikeAction" />
    
    
</RelativeLayout>
