<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
	<ImageView android:src="@drawable/icon" android:layout_width="128px"
		android:layout_height="128px" android:id="@+id/image_preview"></ImageView>
	<TextView android:id="@+id/label_title"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/label_title" />
	<EditText android:id="@+id/textfield_title" android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<requestFocus></requestFocus>
	</EditText>
	<TextView android:text="@string/label_desc" android:id="@+id/label_desc"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		></TextView>
	<EditText android:id="@+id/textfield_desc" android:layout_width="match_parent"
		android:layout_height="wrap_content"></EditText>
	<TextView android:text="Location:" android:id="@+id/label_location"
        android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <Button android:id="@+id/btn_post_photo" 
    android:text="@string/post_photo_action" 
    android:layout_height="wrap_content" 
    android:layout_width="wrap_content"
    android:layout_below="@id/label_location"
    android:layout_centerHorizontal="true"
    android:onClick="doPostPhotoAction" />
</LinearLayout>
